tests/baselines/reference/initializedParameterBeforeNonoptionalNotOptional.errors.txt
index.d.ts(4,30): error TS2532: Object is possibly 'undefined'.
index.d.ts(7,30): error TS2532: Object is possibly 'undefined'.
index.d.ts(7,37): error TS2532: Object is possibly 'undefined'.


==== index.d.ts (3 errors) ====
    export declare function foo({a}?: {
        a?: string;
    }): void;
    export declare function foo2({a}: {
                                 ~~~~~~
        a?: string | undefined;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    } | undefined, b: string): void;
    ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    export declare function foo3({a, b: {c}}: {
                                 ~~~~~~~~~~~~~~
                                        ~~~
!!! error TS2532: Object is possibly 'undefined'.
        a?: string | undefined;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
        b?: {c?: string | undefined;} | undefined;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    } | undefined, b: string): void;
    ~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.